Delete String concatenation